@@ -14,6 +14,8 @@ Version 1.8.2
        does not copy all files. (Stefan)
 - BUG: Issue #534: Compare Working on Multiple
        Updates broken in 1.8.x. (Stefan)
+- BUG: Issue #535: diffing file externals
+       shows empty base. (Stefan)
 
 Version 1.8.1
 - BUG: Issue #481: wrong parameter when
